div 박스에 자주 쓰이는 속성, 스타일 상속

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <img src="me.jpeg" class="profile" />
-    <h3 class="name">강동욱</h3>
+    <h3 class="title">동욱의 자기소개서</h3>
     <p>
       <strong id="special">Front-end</strong>
       Developer
     </p>
-    <p>
-      안녕하세요. 저는 상명대학교 스마트 정보통신공학과를 졸업하고 6개월동안
-      코드스테이츠에서 프론트엔드 부트캠프 과정을 수료했습니다. 저의 목표는
-      성장할 수 있는 회사에 취직하는것입니다. 저의 기술스택은
-      html,css,JavaScript,react 입니다.
-    </p>
+    <div class="box">
+      <p>
+        안녕하세요. 저는 상명대학교 스마트 정보통신공학과를 졸업하고 6개월동안
+        코드스테이츠에서 프론트엔드 부트캠프 과정을 수료했습니다.
+      </p>
+      <p>저의 목표는 성장할 수 있는 회사에 취직하는것입니다.</p>
+      <p>저의 기술스택은 html,css,JavaScript,react 입니다.</p>
+    </div>
   </body>
 </html>
