블로그 글 목록 높이 지정

--- a/writing-list.html
+++ b/writing-list.html
@@ -17,6 +17,7 @@
             <p class="time">1시간 전</p>
           </div>
         </div>
+        <div style="clear: both"></div>
         <div class="blog-write">
           <h3>시계 팔아요.</h3>
           <p>가격은 2만원입니다. 하자없어요.</p>
