float 관련 문제 해결방법 추가

--- a/writing-list.html
+++ b/writing-list.html
@@ -17,6 +17,9 @@
             <p class="time">1시간 전</p>
           </div>
         </div>
+        <!-- float 관련 문제(마진 주면 제대로 안 밀림) 
+            해결방법: clear:both 넣은 <div> 추가하는걸 추천
+        -->
         <div style="clear: both"></div>
         <div class="blog-write">
           <h3>시계 팔아요.</h3>
