--- a/background.html
+++ b/background.html
@@ -5,16 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="background.css" />
+    <link rel="stylesheet" href="./css/background.css" />
   </head>
-  <body>
+  <body style="margin: 0px">
     <div class="main-background">
-      <div class="main-logo"></div>
-      <h5 class="main-title">Welcome To Our freight service</h5>
-      <p class="main-greeting">Hello, we are a freight service provider.</p>
-      <button class="btn">Going to see a truck</button>
+      <h4 class="main-title">Buy Our Shoes!</h4>
+      <p class="main-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt a
+        consetetur molestiae dolorem temproe eaque culpa voluptas odio in
+        obcaecati.
+      </p>
+      <button class="main-button">Buy now</button>
     </div>
-  </body>
 
-  <script></script>
+    <div class="explain-box">
+      <h4>How we design our shoes</h4>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt a
+        consetetur molestiae dolorem temproe eaque culpa voluptas odio in
+        obcaecati.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Nesciunt a consetetur molestiae dolorem temproe eaque culpa voluptas
+        odio in obcaecati.
+      </p>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+  </body>
 </html>
