파일 위치,이름 변경

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <img src="me.jpeg" class="profile" />
+    <img src="./img/me.jpeg" class="profile" />
     <h3 class="title">동욱의 자기소개서</h3>
     <p>
       <strong id="special">Front-end</strong>
