--- a/writing-list.html
+++ b/writing-list.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="writing-list.css" />
+    <link rel="stylesheet" href="./css/writing-list.css" />
   </head>
   <body>
     <div class="container">
       <div class="blog-content">
         <div>
-          <img src="me.jpeg" alt="" class="blog-profile" />
+          <img src="./img/me.jpeg" alt="" class="blog-profile" />
           <div class="blog-name">
             <h4 class="writer">강동욱</h4>
             <p class="time">1시간 전</p>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="blog-img">
-        <img src="watch.avif" class="watch" />
+        <img src="./img/watch.avif" class="watch" />
       </div>
     </div>
   </body>
