display: block; 복습 inherit 되는 스타일속성 복습

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         코드스테이츠에서 프론트엔드 부트캠프 과정을 수료했습니다.
       </p>
       <p>저의 목표는 성장할 수 있는 회사에 취직하는것입니다.</p>
-      <p>저의 기술스택은 html,css,JavaScript,react 입니다.</p>
+      <p>저의 기술스택은 html,css,JavaScript,React 입니다.</p>
     </div>
   </body>
 </html>
