--- a/float.html
+++ b/float.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="header"></div>
       <div class="left-menu"></div>
-      <div class="right"></div>
+      <div class="content"></div>
       <div class="footer"></div>
     </div>
   </body>
