inline-block 복습

--- a/inline-block.html
+++ b/inline-block.html
@@ -18,14 +18,14 @@
     <div class="container" style="font-size: 0px">
       <div class="header"></div>
       <div class="left-menu"></div>
-      <!--주석으로공백제거가능(프리티어때문에자동정렬됨;;) 부모태그에 폰트사이트0픽셀적용해서 해결 
+      <!--주석으로공백제거가능(프리티어때문에자동정렬됨;;) 부모태그에 폰트사이트0 픽셀적용해서 해결 
       -->
-      <div class="right" style="font-size: 12px">
+      <div class="content" style="font-size: 12px">
         <!-- inline-block 박스 안에 글자쓰면 이상해짐 why?
-      html에도 baseline 존재
-      baseline이 옆에 존재하면 display: inline-block 요소들이 baseline 위에 오려고함;;
-      해결방법 : vertical-align: top;
-      -->
+            html에도 baseline 존재
+            display: inline-block 요소옆에 baseline이 옆에 존재하면 display: inline-block 요소들이 baseline 위에 오려고함;;
+            해결방법 : vertical-align: top;
+        -->
         <p>안녕하세유p</p>
       </div>
       <div class="footer"></div>
