float 관련문제 해결
- float 한 요소와 아닌 요소 사이에 clear:both 속성을 가지는 div 추가함

--- a/writing-list.html
+++ b/writing-list.html
@@ -18,8 +18,11 @@
             <p style="margin: 5px">1시간 전</p>
           </div>
         </div>
-        <div class="blog-user-content">
-          <h3 style="margin-top: 30px" id="유니크">시계 팔아요!</h3>
+        <!-- float 관련문제 해결 clear:both 속성가지는 div 추가 -->
+        <div style="clear: both"></div>
+        <!-- float 관련문제로 인해 마진탑 적용안되는 문제발생 => 위코드 clear:both 속성가지는 div 추가 -->
+        <div style="margin-top: 10px">
+          <h3>시계 팔아요!</h3>
           <p>사이즈는 프리사이즈 사용감 별로 없어요~~</p>
         </div>
       </div>
