셀렉터 복습
자손 >
자식 공백

--- a/selector.html
+++ b/selector.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./css/selector.css" />
   </head>
   <body>
+    <!-- <div> 대신에 <nav>라는 시맨틱 태그 사용! -->
+
     <nav>
+      <!-- (참고) 태그에 class 2개 이상 부여하려면 띄어쓰기 후 클래스명 추가-->
       <ul class="navbar">
         <li><a href="#" class="link">영화</a></li>
         <li><a href="#" class="link">맛집</a></li>
@@ -17,7 +20,8 @@
       </ul>
     </nav>
 
-    <!-- <section></section> -->
-    <!-- <footer></footer> -->
+    <!-- 시맨틱 태그 -->
+    <!-- <section></section> 섹션 표현 -->
+    <!-- <footer></footer>  푸터 표현 -->
   </body>
 </html>
