배경에 이미지 넣는 속성 복습 마진 컬랩스 현상 복습

--- a/background.html
+++ b/background.html
@@ -13,7 +13,11 @@
       <p class="main-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt a
         consetetur molestiae dolorem temproe eaque culpa voluptas odio in
-        obcaecati.
+        obcaecati.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Nesciunt a consetetur molestiae dolorem temproe eaque culpa voluptas
+        odio in obcaecati.Lorem ipsum dolor sit amet, consectetur adipisicing
+        elit. Nesciunt a consetetur molestiae dolorem temproe eaque culpa
+        voluptas odio in obcaecati.
       </p>
       <button class="main-button">Buy now</button>
     </div>
