--- a/background.html
+++ b/background.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/background.css" />
   </head>
+  <!-- <body> 기본 마진 있음!! -->
   <body style="margin: 0px">
     <div class="main-background">
       <h4 class="main-title">Buy Our Shoes!</h4>
