box-sizing: border-box, CSS Reset, CSS Nomalize 복습

--- a/background.html
+++ b/background.html
@@ -34,6 +34,20 @@
       </p>
     </div>
 
+    <br />
+
+    <!-- 둘다 max-width:700px인데 padding 주자마자 700px 넘어감 -->
+    <div class="explain-box" style="padding: 50px">
+      <h4>How we design our shoes</h4>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt a
+        consetetur molestiae dolorem temproe eaque culpa voluptas odio in
+        obcaecati.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Nesciunt a consetetur molestiae dolorem temproe eaque culpa voluptas
+        odio in obcaecati.
+      </p>
+    </div>
+
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
