form&input 태그 복습

--- a/form.html
+++ b/form.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./css/form.css" />
   </head>
   <body>
+    <!-- <form action="" method=""> 작성한 내용이 어떤 방식으로 서버에 전달될지 지정가능 -->
+    <!-- <input type="" value="미리 채워진 값" placeholder="배경글자" name="인풋이름"(서버개발시 필요)> type에 따라 여러가지 인풋 생성가능 -->
+    <!-- <select>
+          <option></option>
+        </select>  
+    -->
+    <!-- <textarea></textarea> -->
     <div class="form-background">
       <div class="from-white">
         <form>
@@ -16,10 +23,12 @@
             <label>Your Email</label>
             <input
               type="email"
-              placeholder="abc@exaple.com"
+              placeholder="abc@example.com"
               class="form-input"
             />
           </div>
+
+          <!-- 박스 가로로 배치하기 -->
           <div class="w-50">
             <label>First name</label>
             <input type="text" class="form-input" />
@@ -28,10 +37,16 @@
             <label>Last name</label>
             <input type="text" class="form-input" />
           </div>
+          <div style="clear: both"></div>
+
+          <!-- CSS 고수 특징 : 만들어둔 class 재활용함 -->
           <div class="w-100">
             <label>Message</label>
+            <!-- 재사용했는데 스타일이 더 필요한 class 추가하면 됨 -->
             <textarea class="form-input form-long"></textarea>
           </div>
+
+          <!-- <label> 태그의 for 속성값과 <input>태그의 id 태그의 속성값을 맞추면 라벨텍스트를 눌러도 동작함  -->
           <div class="w-50">
             <input id="sub" type="checkbox" />
             <label for="sub">Subscribe</label>
